# watt

./: .gitignore  .rustfmt.toml  .taplo.toml  CLAUDE.md  Cargo.toml  README.md  build.rs  config.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  doc.yml  nix-cache.yml  release.yml  tag.yml
dbus/: net.hadess.PowerProfiles.conf
docs/: configuring.md
nix/: module.nix  package.nix  shell.nix
src/: battery.rs  config.rs  core.rs  cpu.rs  daemon.rs  daemon_old.rs  engine.rs  fs.rs  main.rs  monitor.rs  power_supply.rs  prometheus.rs  system.rs
src/cli/: debug.rs
src/config/: load.rs  types.rs
watt/: Cargo.toml  audio.rs  config.rs  config.toml  cpu.rs  daemon.rs  disk.rs  fs.rs  gpu.rs  lib.rs  lock.rs  main.rs  metrics.rs  power_supply.rs  profile.rs  system.rs  uncore.rs  usb.rs  vm.rs
watt/dbus/: client.rs  mod.rs  ppd.rs  server.rs  watt.rs
xtask/: Cargo.toml  main.rs
