[workspace]
default-members = [ "watt" ]
members         = [ "watt", "xtask" ]
resolver        = "3"

[workspace.package]
authors      = [ "NotAShelf <raf@notashelf.dev>", "RGBCube <git@rgbcu.be>" ]
description  = "Modern CPU frequency and power management utility for Linux"
edition      = "2024"                                                        # Keep in sync with .rustfmt.toml.
license      = "MPL-2.0"
readme       = true
repository   = "https://github.com/notashelf/watt"
rust-version = "1.88"
version      = "1.0.0"

[workspace.dependencies]
anyhow                = "1.0.102"
clap                  = { features = [ "derive", "env" ], version = "4.6.1" }
clap-verbosity-flag   = "3.0.4"
clap_complete         = "4.6.2"
clap_complete_nushell = "4.6.0"
ctrlc                 = "3.5.2"
env_logger            = "0.11.10"
humantime             = "2.3.0"
jiff                  = "0.2.24"
log                   = "0.4.29"
nix                   = { features = [ "fs" ], version = "0.31.2" }
num_cpus              = "1.17.0"
serde                 = { features = [ "derive" ], version = "1.0.228" }
toml                  = "1.1.2"
yansi                 = { features = [ "detect-env", "detect-tty" ], version = "1.0.1" }
