[workspace]
default-members = [ "watt" ]
members         = [ "watt", "xtask" ]
resolver        = "3"

[workspace.package]
description  = "Modern CPU frequency and power management utility for Linux"
edition      = "2024"                                                        # Keep in sync with .rustfmt.toml.
license      = "MPL-2.0"
readme       = true
repository   = "https://github.com/notashelf/watt"
rust-version = "1.88"
version      = "1.2.0"

[workspace.dependencies]
# Workspace components
watt = { path = "./watt", version = "1.2.0" }

# Other dependencies
anyhow                = "1.0.102"
clap                  = { features = [ "derive", "env" ], version = "4.6.1" }
clap-verbosity-flag   = "3.0.4"
clap_complete         = "4.6.5"
clap_complete_nushell = "4.6.0"
env_logger            = "0.11.10"
humantime             = "2.3.0"
jiff                  = "0.2.28"
log                   = "0.4.32"
nix                   = { features = [ "fs" ], version = "0.31.3" }
num_cpus              = "1.17.0"
serde                 = { features = [ "derive" ], version = "1.0.228" }
tiny_http             = "0.12.0"
tokio                 = { features = [ "macros", "rt-multi-thread", "signal", "time" ], version = "1.52.3" }
toml                  = "1.1.2"
yansi                 = { features = [ "detect-env", "detect-tty" ], version = "1.0.1" }
zbus                  = { default-features = false, features = [ "tokio" ], version = "5.16.0" }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true
