[package]
name                   = "watt"
description.workspace  = true
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "watt"
path = "main.rs"

[dependencies]
anyhow.workspace              = true
clap.workspace                = true
clap-verbosity-flag.workspace = true
env_logger.workspace          = true
futures-util.workspace        = true
humantime.workspace           = true
jiff.workspace                = true
log.workspace                 = true
nix.workspace                 = true
num_cpus.workspace            = true
serde.workspace               = true
serde_json.workspace          = true
schemars.workspace            = true
tiny_http                     = { optional = true, workspace = true }
tokio.workspace               = true
toml.workspace                = true
yansi.workspace               = true
zbus.workspace                = true

[features]
default = [  ]
metrics = [ "dep:tiny_http" ]

[dev-dependencies]
proptest = "1.9.0"
